# Cendric2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_linux_steam.txt  LICENSE  Readme.md  Readme.txt  Sources.txt  cendric.ini  cendric_guide.txt  commit_script.sh  config.ini  dialogue_tool.ini  imgui.ini  main.cpp  ~$ezifikation.docx
.github/workflows/: ci.yml
LICENSE/: CC-BY-NC-SA-4.0.txt
LICENSES/: MIT.txt
db/: balancing.txt  cendricdb.db  db_tests.sh  game_data.db  gearscore.sh  init.sh  init_game_data.sql  init_game_state.sql  init_gitbash.sh  init_unix.sh  initdb.sql  insert_new_spanish.sql  insert_text_core.sql  insert_text_core_utf8.sql  readme.txt  tiz.sql  unit_tests.sh
db/balancing/: balancing.CSV  balancing.xlsx  replace_balanced.py
db/db_tests/: DT_dialogue_translations.sql  DT_double_spaces.sql  DT_gear_score.sql  DT_german_klingt.sql  DT_item_translations.sql  DT_max_choice_length.sql  DT_max_npc_text_length.sql  DT_north_suprised_milita.sql
db/db_utilities/: db_tests.sh  export_languages.sh  gearscore.sh  output_languages.sh
db/insert_scripts/: insert_port_utf8.sql  insert_spawn_utf8.sql  insert_text_book_utf8.sql  insert_text_chest_utf8.sql  insert_text_condition_utf8.sql  insert_text_core_utf8.sql  insert_text_credits_utf8.sql  insert_text_cutscene_utf8.sql  insert_text_enemies.sql  insert_text_enemy_utf8.sql  insert_text_hint_utf8.sql  insert_text_item_utf8.sql  insert_text_location_utf8.sql  insert_text_npc_utf8.sql  insert_text_quest_utf8.sql  insert_text_questcondition_utf8.sql  insert_text_reputation_utf8.sql  insert_text_sign_utf8.sql  insert_text_speech_utf8.sql
db/translation files/: insert_new_spanish.sql  translations_items_part1.txt
db/unit_tests/: UT_double_spaces.sql  UT_max_choice_length.sql
export/item/: Adept's Robes.txt  Alastor's Sickles.txt  Anti Magic.txt  Anti-Magic Crystal.txt  Anti-Magic Pendant.txt  Apple.txt  Aquamarine Ring.txt  Arazath's Letter.txt  Bane of Existence.txt  Basement Key.txt  Beer.txt  Big Pouch.txt  Blood of a Bat.txt  Bloodstained Note.txt  Blue Key.txt  Blue Wizard Hat.txt  Bob's Note.txt  Bone Mask.txt  Bone Ring.txt  Bone Scarf.txt  Bone Scythe.txt  Bone Vestments.txt  Bone.txt  Bread.txt  Broken Shaft.txt  Broken Sickles.txt  Broken Staff Head.txt  Cairn Armour.txt  Candleholder.txt  Captain's Hat.txt  Cave Berries.txt  Cendric's Hat.txt  Cendric's Staff.txt  Cheese.txt  Chicken Mask.txt  Cinderbloom.txt  Circlet of the Enlighted.txt  Circlet of the Order.txt  Circlet of the Recruit.txt  Claws of the Celestial Pirate.txt  (+230 more)
ext/Particles/: ParticleData.cpp  ParticleData.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleHelpers.h  ParticleSpawner.cpp  ParticleSpawner.h  ParticleSystem.cpp  ParticleSystem.h  ParticleUpdater.cpp  ParticleUpdater.h
ext/dirent/: dirent.h
ext/imgui/: imconfig.h
ext/imgui-sfml/: CMakeLists.txt
ext/sfml-changes/: WindowImplX11.cpp  WindowImplX11.hpp
ext/tinyxml2/: tinyxml2.cpp
gamerzilla/: cendric.game
include/: AchievementManager.h  AnimatedGameObject.h  AnimatedSprite.h  AnimatedTile.h  Animation.h  BackgroundLayer.h  Button.h  CharacterCore.h  CharacterCoreReader.h  ChopSpell.h  CrumblyBlockTile.h  CustomParticleUpdaters.h  DatabaseManager.h  Dialogue.h  DialogueFactory.h  DialogueLoader.h  DynamicTile.h  Enemy.h  ErrorScreen.h  FireBasket.h  FireSpell.h  FloatTriangle.h  ForcefieldSpell.h  Game.h  GameObject.h  GameState.h  GameStateController.h  GlobalResource.h  IceSpell.h  IceStaff.h  IceTile.h  InputController.h  Item.h  ItemFactory.h  Level.h  LevelEquipment.h  LevelInterface.h  LevelItem.h  LevelLoader.h  LevelMainCharacter.h  (+45 more)
include/Beans/: DatabaseBean.h  EquipmentParticleBean.h  ItemAttributeBean.h  ItemBean.h  ItemConvertibleBean.h  ItemDocumentPageBean.h  ItemDocumentQuestBean.h  ItemEquipmentBean.h  ItemEquipmentLightBean.h  ItemEquipmentParticleBean.h  (+10 more)
party/: leaderboard.db
res/: info.plist  info.rc  items.csv  items.xlsx  translations.csv  translations_core.csv  translations_core.xlsx  translations_items.csv  translations_quests.csv
saves/: 1437908130sdfsdbla.sav  1437915240du blds futzli df df#f .sav  1438178194cendric.sav  1438247616bla.sav  1439113480Tiz's TestSAVE.sav  1440953111quickslot.sav  1440954743neus game.sav  1442323910milan.sav  1448828490Invisibility.sav  1450740916neu.sav  1451172497doelch.sav  1451830859wald.sav  1451939868Tizs Untergang.sav  1452016518torch.sav  1452987034puzzling.sav  1453065966Patrikan.sav  1453149302skeleton.sav  1453591930HolyFire.sav  1453592184futz.sav  1453675323Gargoyle.sav  1454104987moving tiles.sav  1454284570wp.sav  1454508710modifiers.sav  1455059601elemental POWER.sav  1456693298new.sav  1456966510tutorial_complete.sav  1457218589andi.sav  1457281161usgang.sav  1457995695before_elder.sav  1458138620before_crypt.sav  1458237804inside crypt.sav  1459018868silkweed.sav  1459425179   Patrikan.sav  1460065637ratcave.sav  1460122168before_bridge.sav  1460136003elemental POWER (rats).sav  1460204732bridge.sav  1460363505after_elder.sav  1460364545after_bridge.sav  14609220101.sav  (+351 more)
saves_old/: 150450977001_pre_teleport.sav  150451121302_post_tutorial.sav  150451396404_zeff.sav  150451735808_library.sav  150451995014_sewers.sav  150452058615_syrah_recipe.sav  150452136317_pre_necro.sav  1504559626fakenekro.sav  1504909004habaton.sav  1508362087pre_cut.sav
src/: AchievementManager.cpp  AnimatedGameObject.cpp  AnimatedSprite.cpp  Animation.cpp  BackgroundLayer.cpp  Button.cpp  CharacterCore.cpp  CharacterCoreReader.cpp  ChopSpell.cpp  CrumblyBlockTile.cpp  CustomParticleUpdaters.cpp  DatabaseManager.cpp  Dialogue.cpp  DialogueFactory.cpp  DialogueLoader.cpp  DynamicTile.cpp  Enemy.cpp  ErrorScreen.cpp  FireBasket.cpp  FireSpell.cpp  FloatTriangle.cpp  ForcefieldSpell.cpp  Game.cpp  GameObject.cpp  GameState.cpp  GameStateController.cpp  GlobalResource.cpp  IceSpell.cpp  IceStaff.cpp  IceTile.cpp  InputController.cpp  Item.cpp  ItemFactory.cpp  Level.cpp  LevelEquipment.cpp  LevelInterface.cpp  LevelItem.cpp  LevelLoader.cpp  LevelMainCharacter.cpp  LevelMainCharacterLoader.cpp  (+43 more)
(+1837 files in other folders)
